Addressed Villy's comments

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -63,7 +63,7 @@ The DBEM was forced with simulated ocean conditions from a ten-ensemble member s
 
 ### Calculating an index of transboundary range shift
 
-I developed an index to evaluate range shifts in transboundary stocks under climate change (TI). This index is based on the shifts in the distribution centroid of a transboundary stock relative to the centroid of the neighboring EEZs that share this stock (Figure \@ref(fig:toeFigureS2). The centroid of a transboundary stock was determined by the average (µ) latitude ($lat_{ts}$) and longitude ($lon_{ts}$) across the grid cells with the highest abundance within the neighboring EEZs sharing the stock e.g., sockeye salmon (*Oncorhynchus nerka*) that is transboundary between the United States and Canada. Therefore,
+I developed an index to evaluate range shifts in transboundary stocks under climate change (TI). This index is based on the shifts in the distribution centroid of a transboundary stock relative to the centroid of the neighboring EEZs that share this stock (Figure \@ref(fig:toeFigureS2). The centroid of a transboundary stock was determined by the average (µ) latitude ($lat_{ts}$) and longitude ($lon_{ts}$) across the grid cells with the highest abundance within the neighboring EEZs sharing the stock e.g., ^Pacific halibut (*Hippoglossus stenolepis*) that is transboundary between the United States and Canada. Therefore,
 
 
 <!-- $lat_{ts} = \mu (lat_{per})$ -->
@@ -227,7 +227,7 @@ read_csv("../Tables/mlr_result.csv") %>%
 
 ### Changes in the stock share ratio of transboundary stocks
 
-I have identified the stocks that are projected to have changes in stock share ratio beyond an EEZ’s threat point and estimated the changes in the stock share ratio by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to the recent past (1951-2005) (see methods – \@ref(eq:five)). By the early $21^{st}$ century, the global average proportion of transboundary stocks that are projected to change their stock share ratio beyond the EEZ’s threat point is 18% $\pm$ 15% (Figure \@ref(fig:toeFigure5)A). The changes in stock share ratio are expected to increase slightly towards the mid $21^{st}$ century (Figures \@ref(fig:toeFigureS4) and \@ref(fig:toeFigureS5)). However, changes in stock share ratio for specific stocks and in some EEZs are projected to be exceptionally high. For example, Guatemala shares Panulirus gracilis stock with Mexico, and Guatemala’s share is projected to increase by >50%, that is from 12% to 26% by the early $21^{st}$ century. Towards the mid $21^{st}$ century, changes in stock share ratio per EEZ will not be substantial (Figure \@ref(fig:toeFigureS5)) relative to the early $21^{st}$ century but are expected to increase in intensity (Figure \@ref(fig:toeFigureS4))). My results suggest that 87% (n = 238) of the world EEZs experiences changes in stock share ratio beyond a country’s threat point by the early $21^{st}$ century (Figure \@ref(fig:toeFigure5)A). These EEZs see one third (33% $\pm$ 21%) of their transboundary stocks changing the stock share ratio beyond the threat point (Figure \@ref(fig:toeFigure5)A). Particularly, Brazil, French Guiana, Guam, Kergelen and Pitcairin see changes beyond the threat point for all of the transboundary stocks analyzed, while Venezuela (6%), Bonaire (9%), China (10%) and Vietnam (10%) are the only countries with less than 10% of stocks changing beyond the threat point.
+I have identified the stocks that are projected to have changes in stock share ratio beyond an EEZ’s threat point and estimated the changes in the stock share ratio by the early (2020-2040) and the mid $21^{st}$ century (2040-2060), relative to the recent past (1951-2005) (see methods – \@ref(eq:five)). By the early $21^{st}$ century, the global average proportion of transboundary stocks that are projected to change their stock share ratio beyond the EEZ’s threat point is 18% $\pm$ 15% (Figure \@ref(fig:toeFigure5)A). The changes in stock share ratio are expected to increase slightly towards the mid $21^{st}$ century (Figures \@ref(fig:toeFigureS4) and \@ref(fig:toeFigureS5)). However, changes in stock share ratio for specific stocks and in some EEZs are projected to be exceptionally high. For example, Guatemala shares *Panulirus gracilis* stock with Mexico, and Guatemala’s share is projected to increase by >50%, that is from 12% to 26% by the early $21^{st}$ century. Towards the mid $21^{st}$ century, changes in stock share ratio per EEZ will not be substantial (Figure \@ref(fig:toeFigureS5)) relative to the early $21^{st}$ century but are expected to increase in intensity (Figure \@ref(fig:toeFigureS4))). My results suggest that 87% (n = 238) of the world EEZs experiences changes in stock share ratio beyond a country’s threat point by the early $21^{st}$ century (Figure \@ref(fig:toeFigure5)A). These EEZs see one third (33% $\pm$ 21%) of their transboundary stocks changing the stock share ratio beyond the threat point (Figure \@ref(fig:toeFigure5)A). Particularly, Brazil, French Guiana, Guam, Kergelen and Pitcairin see changes beyond the threat point for all of the transboundary stocks analyzed, while Venezuela (6%), Bonaire (9%), China (10%) and Vietnam (10%) are the only countries with less than 10% of stocks changing beyond the threat point.
 
 
 ```{r toeFigure5, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "Changes in stock share ratio below each country’s threat point by 2030 (2021-2040) relative to 1951-2005. Lines represent the average gain of transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those that are gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point. Panel B zooms in to specific areas shown within the grey dashed line boundaries in A.s"}
@@ -243,26 +243,25 @@ Changes of stock share ratio are largely related to regional changes in biogeogr
 
 ## Discussion
 
-In this chapter, I investigate the timing and intensity of changes in the sharing of transboundary stocks between countries. Our findings highlight the early emergence of transboundary distribution shifts from historical variations for most of the shared stocks in the world. Such early emergence of range shifts indicate the urgency of the challenges that climate change is posing on international fisheries management. Moreover, I identify regional patterns of high climate risk to important fish stocks and associated fisheries at the present-day that will require immediate responses from transboundary fisheries management. Finally, I show that in many instances around the world, countries’ fisheries will experience changes in the sharing of many transboundary stocks to level below that which encourages cooperative resource management between countries. Adaptation measures are therefore needed to reduce the impacts of species range shifts on current international transboundary fisheries treaties.
+In this chapter, I investigate the timing and intensity of changes in the sharing of transboundary stocks between countries. Our findings highlight the early emergence of transboundary distribution shifts from historical variations for most of the shared stocks in the world. Such early emergence of range shifts indicate the urgency of the challenges that climate change is posing on international fisheries management. Moreover, I identify regional patterns of high climate risk to important fish stocks and associated fisheries at the present-day that will require immediate responses from transboundary fisheries management. Finally, I show that in many instances around the world, countries’ fisheries will experience changes in the sharing of many transboundary stocks to levels below of that needed to encourage cooperative resource management between countries. Adaptation measures are therefore needed to reduce the impacts of species range shifts on current international transboundary fisheries treaties.
 
 
 #### High present-day climate risk of on transboundary fisheries management
 
-Our projections for the emergence of distribution shifts of transboundary stocks in the early $21^{st}$ century concur with previous studies that have detected and attributed changes in marine catch composition [@Cheung:2013gk]. For example, in the early 2000s, Humboldt squid (Dosidicus gigas) substantially expanded its geographic range poleward, reaching the coast of Washington state (US). A new fishery targeting Humboldt squid was developed quickly following its range expansion [@Pinsky:2014by; @Zeidberg:2007gs]. In the northeast Atlantic, the Atlantic mackerel (Scomber scombrus) fisheries are multi-laterally managed by the EU, Norway, Iceland, Russia, and Denmark (on behalf of the Faroe Islands and Greenland) through the North-East Atlantic Fisheries Commission (NEAFC). However, a range expansion of Atlantic mackerel (Scomber scombrus) into Icelandic waters in 2007 resulted in Iceland capturing 6% of the total fishery catch and a further 18% capture in 2008, without consultation with NEAFC and threatening the sustainability of the stock [@Spijkers:2017ij]. Such changes resulted in disputes between Iceland and the Faroes Islands, as well as the NEAFC member states [@Spijkers:2017ij]. As climate change impacts on transboundary stocks continue to emerge from historical variability in the coming years, mal-adapted fisheries management and international disputes like that of Atlantic mackerel are likely to increase in frequency [@Pinsky:2018cb].
+Our projections for the emergence of distribution shifts of transboundary stocks in the early $21^{st}$ century concur with previous studies that have detected and attributed changes in marine catch composition [@Cheung:2013gk]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range poleward, reaching the coast of Washington state (US). A new fishery targeting Humboldt squid was developed quickly following its range expansion [@Pinsky:2014by; @Zeidberg:2007gs]. In the northeast Atlantic, the Atlantic mackerel (*Scomber scombrus*) fisheries are multi-laterally managed by the EU, Norway, Iceland, Russia, and Denmark (on behalf of the Faroe Islands and Greenland) through the North-East Atlantic Fisheries Commission (NEAFC). However, a range expansion of Atlantic mackerel into Icelandic waters in 2007 resulted in Iceland capturing 6% of the total fishery catch and a further 18% capture in 2008, without consultation with NEAFC and threatening the sustainability of the stock [@Spijkers:2017ij]. Such changes resulted in disputes between Iceland and the Faroes Islands, as well as the NEAFC member states [@Spijkers:2017ij]. As climate change impacts on transboundary stocks continue to emerge from historical variability in the coming years, mal-adapted fisheries management and international disputes like that of Atlantic mackerel are likely to increase in frequency [@Pinsky:2018cb].
 
-The projected range shifts of large number of transboundary stocks emerging from historical variability since the early 2000s can be partially attributed to the parallel emergence of several environmental variables (e.g., temperature and oxygen) that influence their distribution [@Rodgers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Mahlstein:2011fy]. Marine organisms have a thermal tolerance that limits their habitable temperature range [@IPCC:2019tn], which then explains the sensitivity of the animal to warming and is a main driver of any distributional change [@IPCC:2019tn]. Oxygen plays a similar role to that of temperature [@Clarke:2020ep], especially for tuna species that require large amounts of dissolved oxygen for their metabolism [@IPCC:2014bz]. It has been estimated that since the early 2000s, increased sea surface temperature (SST) and decrease in subsurface oxygen have emerged from historical variability for 79% and 23% of the global ocean, respectively, and that by 2080, SST is projected to emerge in 90% of the global ocean while the area affected by lower O2 will have doubled under a high greenhouse gas emissions scenario (RCP 8.5) [@Rodgers:2015jq]. Moreover, before 2100, surface acidification, nitrate content and net primary production, also important variables for species distributions, will have emerged from the historical variability of 1861-1900 in 30% and 60% of the ocean under a low (RCP 2.6) and strong (RCP 8.5) climate change scenario, respectively [@IPCC:2019tn]. These oceanographic changes are important drivers of change in species distributions as represented in the DBEM [@Cheung:2016jd; @Cheung:0ur]. [I think we can tighten up the end of this paragraph to, e.g. from ‘It has been estimated..’ as I am not 100% sure of the point. Is it saying that these variables are all included in DBEB? If so, does it then imply that we could more formally look at things? Or, is the idea here to make the point that SST and O2 changes are most clearly emerging, but that other factors are also at play?]
+The projected range shifts of large number of transboundary stocks emerging from historical variability since the early 2000s can be partially attributed to the parallel emergence of several environmental variables (e.g., temperature and oxygen) that influence their distribution [@Rodgers:2015jq; @Keller:2014jv; @Frolicher:2016dg; @Mahlstein:2011fy]. Marine organisms have a thermal tolerance that limits their habitable temperature range [@IPCC:2019tn], which then explains the sensitivity of the animal to warming and is a main driver of any distributional change [@IPCC:2019tn]. Oxygen plays a similar role to that of temperature [@Clarke:2020ep], especially for tuna species that require large amounts of dissolved oxygen for their metabolism [@IPCC:2014bz]. It has been estimated that since the early 2000s, increased sea surface temperature (SST) and decrease in subsurface oxygen have emerged from historical variability for 79% and 23% of the global ocean, respectively, and that by 2080, SST is projected to emerge from historical variability in 90% of the global ocean while the area affected by lower $O_2$ will have doubled under a high greenhouse gas emissions scenario (RCP 8.5) [@Rodgers:2015jq]. Moreover, before 2100, surface acidification, nitrate content and net primary production, also important variables for species distributions, will have emerged from the historical variability of 1861-1900 in 30% and 60% of the ocean under a low (RCP 2.6) and strong (RCP 8.5) climate change scenario, respectively [@IPCC:2019tn]. These oceanographic changes are important drivers of change in species distributions as represented in the DBEM [@Cheung:2016jd; @Cheung:0ur].
 
 Regional differences in time of emergence are attributed to the variations in environmental conditions, species’ climate vulnerability, and the characteristics of political boundaries. Specifically, our findings are consistent with results from previous studies that show tropical species are already shifting their distributions in the last few decades [@Poloczanska:2016kk]. The tropics are among the most species-rich biomes [@Reygondeau:2019uh] and have potentially experienced some of the highest levels of warming relative to natural internal variability [@IPCC:2019tn; @Roemmich:2015id]. In the tropics, marine species also live close to their thermal tolerance, making them highly vulnerable to warming [@IPCC:2014bz]. Consequently,  species have to move towards deeper or sub-tropical waters as a result of climate change [@Poloczanska:2016kk], although in some regions species follow local temperature gradients towards the equator or shallow waters [@Clarke:2020ep]. Moreover, tropical species are expanding their range into sub-tropical biomes [@Fogarty:2017eo] and catch-data analysis shows a reduction in sub-tropical species catches in tropical waters between 1970 and 2006 [@Cheung:2013gk]. In addition to species natural traits and the environmental pressure from climate change, the tropics comprise areas with relatively small EEZs that border with multiple countries (e.g., The Caribbean). These tropical areas are projected to have the highest number of transboundary stocks’ distribution shifts emerging in the incoming years.
 
 
 ### Hotspot of climate risk on transboundary fisheries management
 
-
-Our results underscore regional ‘hotspots’ of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figure \@ref(fig:toeFigure2)). For example, Polynesia and Micronesia are the only regions where the average time of emergence of the distribution of where all transboundary stocks across all EEZs emerged before 2022 (Figure \@ref(fig:toeFigure5)). Moreover, countries in these hotspot regions are highly dependent on pelagic-oceanic (e.g., tunas and bill fishes; [@Johnson:2017ev]) and reef-associated transboundary stocks [@Cabral:2018hc] for both food security and profits [@CisnerosMontemayor:2016gq; @Hanich:2018dh]. On the other hand, “coldspots” of climate risk exist for transboundary fisheries, like the Northeast Atlantic and Northwest Pacific, where stocks are expected to emerge later in the 21st century. Assuming that these countries already have adequate transboundary management to deal with historical and current variations in fish stocks’ distribution e.g., the Pacific Salmon Treaties [@Miller:2004fpa], management agencies are likely to have more time to prepare for emerging stock shifts. 
+Our results underscore regional ‘hotspots’ of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figure \@ref(fig:toeFigure2)). For example, Polynesia and Micronesia are the only regions where the average time of emergence of the distribution of where all transboundary stocks across all EEZs emerged before 2022 (Figure \@ref(fig:toeFigure5)). Moreover, countries in these hotspot regions are highly dependent on pelagic-oceanic (e.g., tunas and bill fishes; [@Johnson:2017ev]) and reef-associated transboundary stocks [@Cabral:2018hc] for both food security and profits [@CisnerosMontemayor:2016gq; @Hanich:2018dh]. On the other hand, “coldspots” of climate risk exist for transboundary fisheries, like the Northeast Atlantic and Northwest Pacific, where stocks are expected to emerge later in the $21^{st}$ century. Assuming that these countries already have adequate transboundary management to deal with historical and current variations in fish stocks’ distribution e.g., the Pacific Salmon Treaties [@Miller:2004fpa], management agencies are likely to have more time to prepare for emerging stock shifts. 
 
 In cases where climate driven changes in stocks are emerging, or have already emerged, from historical variability adaptation policies are urgently needed to address the potential impact on important fisheries [@Burden:2019ij]. Currently, fisheries targeting shared tuna stocks in the South Pacific Islands region operate under the Vessel Day Scheme, which because it takes into account shifts in stocks and catches makes it a good example of a management system that is somewhat anticipatory [@Aqorau:2018bh]. However, even strategies that take into consideration the shift of the species within the Party’s area will likely also have to deal with the ‘newcomer issue’ that NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. As the climate trend in species emerges from their historical distribution since 2006, regional management bodies must revise their management actions as most are not currently equipped with strategies to cope with shifting species distributions [@Oremus:2020id; @Sumby:2021gw]. This is of specific concern for those management bodies located in the emerging “hotspots” here identified.
 
-Some EEZs lack stocks with emerging transboundary index because of a combination of their shape, climate projections, and a reduced number of transboundary stocks. For example, there are 59 commercial fish stocks fished in the Arctic with the vast majority focused on the Barents, Bering and Norwegian seas, with limited knowledge about the species biology [@Christiansen:2014gg]. However, the Arctic has been warming faster than many other regions, resulting in a reduction in sea-ice [@Douglas:2010Mb] leading to the  potential for  occupation by species not previously present [@IPCC:2019tn]. As a result, the biomass of Arctic marine animals [@BryndumBuchholz:2019kh] and catch and revenue of associated fisheries [@Tai:2019cq; @Lam:2014fq] are expected to increase in the incoming years, although substantial uncertainty exists on the magnitude of change [@BryndumBuchholz:2019kh]. Moreover, projections suggest a larger increment on transboundary stocks in the incoming years in the Arctic [@Pinsky:2018cb] as climate change pushes sub-polar species further North [@Morley:2018fn; @Frainer:2017ji]. In the specific case of Brazil, in addition to having few transboundary stocks (only four shared with Uruguay in this study), the large difference in the EEZs lengths could also be influencing the results.
+Some EEZs lack stocks with emerging transboundary index because of a combination of their shape, climate projections, and a reduced number of transboundary stocks. For example, there are 59 commercial fish stocks fished in the Arctic with the vast majority on the Barents, Bering and Norwegian seas, with limited knowledge about the species biology [@Christiansen:2014gg]. However, the Arctic has been warming faster than many other regions, resulting in a reduction in sea-ice [@Douglas:2010Mb] leading to the  potential for  occupation by species not previously present [@IPCC:2019tn]. As a result, the biomass of Arctic marine animals [@BryndumBuchholz:2019kh] and catch and revenue of associated fisheries [@Tai:2019cq; @Lam:2014fq] are expected to increase in the incoming years, although substantial uncertainty exists on the magnitude of change [@BryndumBuchholz:2019kh]. Moreover, projections suggest a larger increment on transboundary stocks in the coming years in the Arctic [@Pinsky:2018cb] as climate change pushes sub-polar species further north [@Morley:2018fn; @Frainer:2017ji]. In the specific case of Brazil, in addition to having few transboundary stocks (only four shared with Uruguay in this study), the large difference in the EEZs lengths could also be influencing the results.
 
 
 
@@ -270,9 +269,9 @@ Some EEZs lack stocks with emerging transboundary index because of a combination
 
 ### Changes in stock share ratio will be ubiquitous
 
-Changes in stock share ratio beyond a country’s threat point will be seen across the world, suggesting that climate change impacts on transboundary stock management is a global problem (Figure \@ref(fig:toeFigure5)). Poleward shifts in stock share ratio are expected in regions of the world with relatively long EEZs and few boundaries, like the northeast Pacific and the southeast Atlantic. However, despite observations and modelling work indicating that climate change is generally shifting species distributions poleward [@Cheung:2010dt; @Poloczanska:2016kk; @IPCC:2019tn; @Fogarty:2017eo], some regions like the eastern tropical Pacific and eastern tropical Atlantic Oceans will experience a shift in distribution towards the equator. Specifically, in the eastern tropical Pacific, the direction of shift is expected to be from Mexico to Ecuador with EEZs losing stock share ratio to their southern neighbors. Such range shifts towards the equator reflect movements to cooler habitats characteristic of equatorial upwelling systems [@Clarke:2020ep]and are consistent with regional modeling studies suggesting that by the mid 21st century, marine species will move between 50 and 100 km southward of Mexico’s EEZ towards Peru under a high emission scenario [@Clarke:2020ep]. Moreover, regions characterized by multiple political boundaries, like the Caribbean and the northeast Atlantic, will see a complex network of changes in stock share ratio with no clear pattern (Figure \@ref(fig:toeFigure5)B). These regions are known for being highly connected by both fish adult migration [@Levin:2018in] and dispersal of larvae [@Ramesh:2019va] supporting the implementation of joint management plans [@Burden:2019ij] and the call for new implemented shared policies [@Levin:2018in]. However, game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Sumaila:2013hv], thus, making it particularly challenging for countries in these regions to coordinate the management of shifting shared stocks.
+Changes in stock share ratio beyond a country’s threat point will be seen across the world, suggesting that climate change impacts on transboundary stock management is a global problem (Figure \@ref(fig:toeFigure5)). Poleward shifts in stock share ratio are expected in regions of the world with relatively long EEZs and few boundaries, like the northeast Pacific and the southeast Atlantic. However, despite observations and modelling work indicating that climate change is generally shifting species distributions poleward [@Cheung:2010dt; @Poloczanska:2016kk; @IPCC:2019tn; @Fogarty:2017eo], some regions like the eastern tropical Pacific and easterntropical Atlantic Oceans will experience a shift in distribution towards the equator. Specifically, in the eastern tropical Pacific, the direction of shift is expected to be from Mexico to Ecuador with EEZs losing stock share ratio to their southern neighbors. Such range shifts towards the equator reflect movements to cooler habitats characteristic of equatorial upwelling systems [@Clarke:2020ep]and are consistent with regional modeling studies suggesting that by the mid 21st century, marine species will move between 50 and 100 km southward of Mexico’s EEZ towards Peru under a high emission scenario [@Clarke:2020ep]. Moreover, regions characterized by multiple political boundaries, like the Caribbean and the northeast Atlantic, will see a complex network of changes in stock share ratio with no clear pattern (Figure \@ref(fig:toeFigure5)B). These regions are known for being highly connected by both fish adult migration [@Levin:2018in] and dispersal of larvae [@Ramesh:2019va] supporting the implementation of joint management plans [@Burden:2019ij] and the call for new implemented shared policies [@Levin:2018in]. However, game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Sumaila:2013hv], thus, making it particularly challenging for countries in these regions to coordinate the management of shifting shared stocks.
 
-Changes in stock share ratio beyond the threat point of countries sharing a common resource could instigate international conflict and hinder bi-lateral agreements [@Miller:2013iv; @Sumaila:2020tp]. Lessons learned from historic distributional shifts of shared stocks suggest that treaties that are not prepared to respond to such shifts will be less resilient to changes in transboundary fish stocks share ratio due to climate change [@Miller:2013iv; @Sumaila:2020tp]. For example, disputes over Pacific salmon between Canada and the USA arose in the 1990s when a climate-related shift in stock abundance favoured Alaska’s salmon fisheries over Canada’s [@Miller:2013iv; @Munro:2002uf; @Song:2017va]. The conflict lasted over ten years until Canada and the USA agreed on a mutual conservation fund where the US would contribute the larger proportion to support scientific research, habitat restoration and enhancement of wild stock production in transboundary rivers [@Munro:2002uf]. Identified strategies to cope with changes in the share proportion of transboundary stocks include the incorporation of side payments [@Tunca:2019if], increased international cooperation [@Miller:2013iv] and dynamic ocean management [@Pinsky:2018cb]. Side payments are mechanisms that provide a solution to the inequality produced by shifts in the stock’s distribution [@Tunca:2019if; @Miller:2004fpa]. These can be monetary (e.g., the stock-“winning” State compensates the stock-“losing” state for the proportional shift) or other methods like the Pacific salmon case (e.g., a conservation fund paid mainly by one Party) [@Miller:2004fpa; @Miller:2013iv]. Strengthening current international cooperation will be required as stock distribution will move to neighboring jurisdictions, requiring combined efforts to generate information and set proper management rules [@Miller:2013iv]. Finally, flexible management rules might be more appropriate to capturing t distributional shifts. For example, a quota allocation based on the stock’s current distribution like that for Pacific halibut (*Hippoglossus stenolepis*) managed by Canada and the US [@Sumaila:2020tp; @PalaciosAbrantes:2020vt] would be more agile than one based on a fixed-historical proportion like the case of the EU [@Baudron:2020dj].
+Changes in stock share ratio beyond the threat point of countries sharing a common resource could instigate international conflict and hinder bi-lateral agreements [@Miller:2013iv; @Sumaila:2020tp]. Lessons learned from historic distributional shifts of shared stocks suggest that treaties that are not prepared to respond to such shifts will be less resilient to changes in transboundary fish stocks share ratio due to climate change [@Miller:2013iv; @Sumaila:2020tp]. For example, disputes over Pacific salmon between Canada and the USA arose in the 1990s when a climate-related shift in stock abundance favoured Alaska’s salmon fisheries over Canada’s [@Miller:2013iv; @Munro:2002uf; @Song:2017va]. The conflict lasted over ten years until Canada and the USA agreed on a mutual conservation fund where the US would contribute the larger proportion to support scientific research, habitat restoration and enhancement of wild stock production in transboundary rivers [@Munro:2002uf]. Identified strategies to cope with changes in the share proportion of transboundary stocks include the incorporation of side payments [@Tunca:2019if], increased international cooperation [@Miller:2013iv] and dynamic ocean management [@Pinsky:2018cb]. Side payments are mechanisms that provide a solution to the inequality produced by shifts in the stock’s distribution [@Tunca:2019if; @Miller:2004fpa]. These can be monetary (e.g., the stock-“winning” state compensates the stock-“losing” state for the proportional shift) or other methods like the Pacific salmon case (e.g., a conservation fund paid mainly by one party) [@Miller:2004fpa; @Miller:2013iv]. Strengthening current international cooperation will be required as stock distribution will move to neighboring jurisdictions, requiring combined efforts to generate information and set proper management rules [@Miller:2013iv]. Finally, flexible management rules might be more appropriate to capturing t distributional shifts. For example, a quota allocation based on the stock’s current distribution like that for Pacific halibut (*Hippoglossus stenolepis*) managed by Canada and the US [@Sumaila:2020tp; @PalaciosAbrantes:2020vt] would be more agile than one based on a fixed-historical proportion like the case of the EU [@Baudron:2020dj].
 
 ## Caveats and uncertainties
 
